--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Picture Of The Day</string>
+    <string name="search_in_wiki">Поиск в википедии</string>
+    <string name="wiki_search_helper">Поищите термин в википедии</string>
+    <string name="before_yesterday">Позавчера</string>
+    <string name="yesterday">Вчера</string>
+    <string name="today">Сегодня</string>
+    <string name="photo_of_the_day_stub">Photo of the day</string>
 </resources>
