--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="photo_of_the_day_stub">Photo of the day</string>
     <string name="app_bar_settings">Настройки</string>
     <string name="app_bar_favorites">Избранное</string>
+    <string name="bottom_app_bar_description">Описание</string>
 </resources>
