--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,11 @@
     <string name="yesterday">Вчера</string>
     <string name="today">Сегодня</string>
     <string name="photo_of_the_day_stub">Photo of the day</string>
-    <string name="app_bar_settings">Настройки</string>
-    <string name="app_bar_favorites">Избранное</string>
     <string name="bottom_app_bar_description">Описание</string>
     <string name="dark_mode">Режим затемнения</string>
     <string name="settings_header">Настройки</string>
     <string name="pod_header_text">Изображение дня от NASA</string>
     <string name="with_description">С описанием</string>
     <string name="hd_quality">HD-качество</string>
+    <string name="settings">Настройки</string>
 </resources>
