--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="with_description">С описанием</string>
     <string name="hd_quality">HD-качество</string>
     <string name="settings">Настройки</string>
+    <string name="main">Главная</string>
 </resources>
