Убрал ненужные иконки, добавил иконку Марса и соотв.пункт меню. Оставил только 3 элемента навигации

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hd_quality">HD-качество</string>
     <string name="settings">Настройки</string>
     <string name="main">Главная</string>
+    <string name="mars">Марс</string>
 </resources>
