Добавил выбор даты фото с Марса

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="random_date">Случайно</string>
     <string name="choose_date">Выбрать дату</string>
     <string name="mars_rover_description">Фотографии сделаны марсоходом Curiosity. Дата его прибытия на Марс - 06.08.2012.</string>
+    <string name="mars_rover_selected_date">Показано фото за</string>
+    <string name="select_date">Выберите дату</string>
 </resources>
